Add bootstrap Icon

--- a/Vote-Application_JonathanMutala.csproj
+++ b/Vote-Application_JonathanMutala.csproj
@@ -23,4 +23,13 @@
     <Folder Include="Areas\Identity\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <EmbeddedResource Update="Ressources\Resource.en.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Ressources\Resource.fr.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
