--- a/Vote-Application_JonathanMutala.csproj
+++ b/Vote-Application_JonathanMutala.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -21,15 +21,6 @@
 
   <ItemGroup>
     <Folder Include="Areas\Identity\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <EmbeddedResource Update="Ressources\Resource.en.resx">
-      <Generator>PublicResXFileCodeGenerator</Generator>
-    </EmbeddedResource>
-    <EmbeddedResource Update="Ressources\Resource.fr.resx">
-      <Generator>PublicResXFileCodeGenerator</Generator>
-    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
