--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,27 @@
 /obj/Debug/net6.0/Vote-Application_JonathanMutala.sourcelink.json
 /obj/Debug/net6.0/Vote_Application_JonathanMutala.Ressources.Resource.en.resources
 /obj/Debug/net6.0/Vote_Application_JonathanMutala.Ressources.Resource.fr.resources
+/.vs/ProjectEvaluation/vote-application_jonathanmutala.metadata.v7.bin
+/.vs/ProjectEvaluation/vote-application_jonathanmutala.projects.v7.bin
+/.vs/ProjectEvaluation/vote_application_jonathanmutala.metadata.v7.bin
+/.vs/ProjectEvaluation/vote_application_jonathanmutala.projects.v7.bin
+/.vs/Vote-Application_JonathanMutala/FileContentIndex/2a866060-4dc4-4db8-9605-4a6aae7644aa.vsidx
+/.vs/Vote-Application_JonathanMutala/FileContentIndex/432c15b2-c05d-4670-bc77-260a335502a6.vsidx
+/.vs/Vote-Application_JonathanMutala/FileContentIndex/54962762-f467-4881-aebe-a79e1f491d1e.vsidx
+/.vs/Vote-Application_JonathanMutala/FileContentIndex/817e6d28-4ac4-4d63-a5bc-caf826fb9b99.vsidx
+/.vs/Vote-Application_JonathanMutala/FileContentIndex/82fbf5e6-9ecf-4753-a581-9fd56b925c1c.vsidx
+/.vs/Vote-Application_JonathanMutala/FileContentIndex/ecc875dc-b4d0-45f3-924d-5f6400d1210c.vsidx
+/.vs/Vote-Application_JonathanMutala/DesignTimeBuild/.dtbcache.v2
+/.vs/Vote-Application_JonathanMutala/v17/.futdcache.v2
+*.config
+*.v2
+*.vsidx
+*.suo
+*.dll
+/bin/Debug/net6.0/Vote-Application_JonathanMutala.staticwebassets.runtime.json
+/bin/Debug/net6.0/Vote_Application_JonathanMutala.deps.json
+/bin/Debug/net6.0/Vote_Application_JonathanMutala.exe
+/bin/Debug/net6.0/Vote_Application_JonathanMutala.pdb
+/bin/Debug/net6.0/Vote_Application_JonathanMutala.runtimeconfig.json
+/bin/Debug/net6.0/Vote_Application_JonathanMutala.staticwebassets.runtime.json
+*.css
