--- a/Vote_Application_JonathanMutala.csproj
+++ b/Vote_Application_JonathanMutala.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web" >
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -21,6 +21,18 @@
 
   <ItemGroup>
     <Folder Include="Areas\Identity\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Controllers.ElectionController.fr.resx" >
+      <Generator>PublicResXFileCodeGenerator</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Ressources/Controllers.ElectionController.en.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Ressources/Controllers.ElectionController.fr.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
