--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,8 @@
 /obj/Debug/net6.0/Vote_Application_JonathanMutala.csproj.GenerateResource.cache
 /obj/Debug/net6.0/Vote_Application_JonathanMutala.pdb
 /obj/Debug/net6.0/Vote_Application_JonathanMutala.sourcelink.json
+/obj/Debug/net6.0/Vote_Application_JonathanMutala.csproj.CoreCompileInputs.cache
+/obj/Debug/net6.0/Vote_Application_JonathanMutala.csproj.FileListAbsolute.txt
+/obj/Debug/net6.0/Vote_Application_JonathanMutala.Resources.Controllers.ElectionController.resources
+/obj/Debug/net6.0/Vote_Application_JonathanMutala.Ressources.Controllers.ElectionController.en.resources
+/obj/Debug/net6.0/Vote_Application_JonathanMutala.Ressources.Controllers.ElectionController.fr.resources
