--- a/Vote_Application_JonathanMutala.csproj
+++ b/Vote_Application_JonathanMutala.csproj
@@ -24,8 +24,23 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Resources\Controllers.ElectionController.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Controllers.ElectionController.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
     <EmbeddedResource Update="Controllers.ElectionController.fr.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Resources\Controllers.ElectionController.fr.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Resources\Controllers.ElectionController.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Controllers.ElectionController.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
 
