Ajout de la traduction dans la page d'election

--- a/Vote_Application_JonathanMutala.csproj
+++ b/Vote_Application_JonathanMutala.csproj
@@ -42,6 +42,12 @@
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Controllers.ElectionController.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Update="Resources\Views\Election\Index.en.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Resources\Views\Election\Index.fr.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
