ignorer les elements

--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,5 @@
 /obj/Debug/net6.0/Vote_Application_JonathanMutala.Resources.Controllers.ElectionController.resources
 /obj/Debug/net6.0/Vote_Application_JonathanMutala.Ressources.Controllers.ElectionController.en.resources
 /obj/Debug/net6.0/Vote_Application_JonathanMutala.Ressources.Controllers.ElectionController.fr.resources
+/obj/Debug/net6.0/project.razor.vs.json
+/obj/Debug/net6.0/Vote_Application_JonathanMutala.GeneratedMSBuildEditorConfig.editorconfig
