--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,8 @@
 /obj/Debug/net6.0/Vote_Application_JonathanMutala.Ressources.Controllers.ElectionController.fr.resources
 /obj/Debug/net6.0/project.razor.vs.json
 /obj/Debug/net6.0/Vote_Application_JonathanMutala.GeneratedMSBuildEditorConfig.editorconfig
+/obj/Debug/net6.0/Vote_Application_JonathanMutala.assets.cache
+/obj/project.assets.json
+/obj/project.nuget.cache
+/obj/Vote_Application_JonathanMutala.csproj.nuget.dgspec.json
+/obj/Vote_Application_JonathanMutala.csproj.nuget.g.props
