--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,4 @@
 /obj/Vote_Application_JonathanMutala.csproj.nuget.dgspec.json
 /obj/Vote_Application_JonathanMutala.csproj.nuget.g.props
 *.resources
+/.vs/Vote_Application_JonathanMutala/v17/TestStore/0
