--- a/Vote_Application_JonathanMutala.csproj
+++ b/Vote_Application_JonathanMutala.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <Folder Include="Areas\Identity\" />
+    <Folder Include="Views\Candidate\" />
   </ItemGroup>
 
   <ItemGroup>
